# mdla

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  CITATION.cff  README.md  dict_metrics.py  example_benchmark_performance.py  example_multivariate.py  example_sparse_decomposition.py  example_univariate.py  experiment_bci_competition.py  experiment_dictionary_recovering.py  experiment_multivariate_recovering.py  mdla.py  multivariate_dict_learn.py  plot_bci_dict.py  pyproject.toml  requirements.txt  setup.cfg  test_dict_metrics.py  test_mdla.py  test_multivariate_dict_learn.py
.github/workflows/: test_lint.yml
examples/: example_multivariate.py  plot_bci_dict.py
experiments/: experiment_bci_competition.py  experiment_dictionary_recovering.py  experiment_multivariate_recovering.py
mdla/: __init__.py  mdla.py
tests/: test_dict_metrics.py
