[tool.black]
line-length = 90
target-version = ["py39"]

[tool.isort]
src_paths = ["mdla"]
profile = "black"
line_length = 90
lines_after_imports = 2

[tool.poetry]
name = "mdla"
version = "1.0.3"
description = "Multivariate Dictionary Learning Algorithm"
authors = ["Sylvain Chevallier <sylvain.chevallier@universite-paris-saclay.fr>"]
readme = "README.md"
repository = "https://github.com/sylvchev/mdla"
documentation = "http://github.com/sylvchev/mdla"
keywords = ["sparse decomposition", "dictionary learning", "multivariate signal", "eeg"]
license = "BSD-3-Clause"
classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^1.26.0"
scipy = "^1.11.3"
scikit-learn = "^1.3.1"
matplotlib = "^3.8.0"
cvxopt = "^1.3.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
